--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ services:
   - docker
 
 before_install:
-  - docker build -t lzaltzberg/react-test -f ./client/Dockerfile.dev .
+  - docker build -t lzaltzberg/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true lzaltzberg/react-test npm test
+  -
 after_success:
   - docker build -t lzaltzberg/multi-client ./client
   - docker build -t lzaltzberg/multi-nginx ./nginx
