--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t lzaltzberg/multi-server ./server
   - docker build -t lzaltzberg/multi-worker ./worker
   #log in to the docker CLI
-  - echo "$DOCKER_PASSWORD | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   #take those images and push them to docker hub
   - docker push lzaltzberg/multi-client
   - docker push lzaltzberg/multi-nginx
